route_table_pub.tf
resource "aws_route_table" "terraform_route_table_pub" {
  vpc_id = aws_vpc.Terraform_VPC.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.terraform_igw.id
  }

  tags = {
    Name = "terraform_route_table_pub"
  }
}
